syntax = "proto3";

package yuhaiin.node;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/node";

import "node/point/point.proto";
import "node/subscribe/subscribe.proto";
import "node/tag/tag.proto";

message node {
  yuhaiin.point.point tcp = 4 [ json_name = "tcp" ];
  yuhaiin.point.point udp = 5 [ json_name = "udp" ];
  map<string, yuhaiin.subscribe.link> links = 2 [ json_name = "links" ];
  manager manager = 3 [ json_name = "manager" ];
}

message nodes {
  map<string, string> nodesV2 = 3 [ json_name = "node_hash_map" ];
}

message manager {
  map<string, nodes> groupsV2 = 2 [ json_name = "group_nodes_map" ];
  map<string, yuhaiin.point.point> nodes = 3 [ json_name = "nodes" ];
  map<string, yuhaiin.tag.tags> tags = 4 [ json_name = "tags" ];
}