syntax = "proto3";

package yuhaiin.tag;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/node/tag";

enum tag_type {
  node = 0;
  mirror = 1;
}

message tags {
  string tag = 1 [ json_name = "tag" ];
  tag_type type = 3 [ json_name = "type" ];
  repeated string hash = 2 [ json_name = "hash" ];
}